--- a/config.json
+++ b/config.json
@@ -3,5 +3,10 @@
 	"debug_settings": {
 		"log": true,
 		"copy_token_to_clipboard": true
-	}
+	},
+	"VOID_GEOHASH_PRECISION": 5,
+	"USER_GEOHASH_PRECISION": 6,
+	"VOID_VIEW_RADIUS": 5, "VOID_VIEW_UNITS": "miles",
+	"LOCATION_UPDATE_MINIMUM_SECS": 900,
+	"MESSAGE_HASH_SALT": "bringthesalt"
 }
