everything seems to work after refactor, should start doing unit tests on all the queries

--- a/config.json
+++ b/config.json
@@ -7,6 +7,5 @@
 	"VOID_GEOHASH_PRECISION": 5,
 	"USER_GEOHASH_PRECISION": 6,
 	"VOID_VIEW_RADIUS": 5, "VOID_VIEW_UNITS": "miles",
-	"LOCATION_UPDATE_MINIMUM_SECS": 900,
-	"MESSAGE_HASH_SALT": "bringthesalt"
+	"LOCATION_UPDATE_MINIMUM_SECS": 900
 }
