--- a/server/package.json
+++ b/server/package.json
@@ -7,9 +7,12 @@
     },
     "dependencies": {
         "@apollo/client": "^3.2.0",
+        "bcryptjs": "^2.4.3",
+        "clipboardy": "^2.3.0",
         "geohashes-near": "^1.0.0",
         "graphql": "^15.3.0",
         "graphql-yoga": "^1.18.3",
-        "prisma-client-lib": "^1.34.10"
+        "prisma-client-lib": "^1.34.10",
+        "react": "^16.13.1"
     }
 }
